.k8s/overlays/sandbox/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    kubernetes.io/ingress.class: nginx
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Daikin PAYG'
    nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - payg-sandbox.ext.gpmn.net
    secretName: wildcard-ext-gpmn-net
  rules:
  - host: payg-sandbox.ext.gpmn.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port: 
              number: 80
  - host: payg-sandbox.ext.gpmn.net
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: imt-payg-apigateway
            port: 
              number: 8001
---
apiVersion: v1
data:
  auth: cGF5ZzpVZ3A2YWFtYVJQNVNVCg==
kind: Secret
metadata:
  creationTimestamp: "2022-12-08T05:04:29Z"
  name: basic-auth
  resourceVersion: "44739453"
  uid: 8fa9c82d-7a2a-47bc-93a9-255950bd45a0
type: Opaque

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-imt-gateway-api
  labels:
    kubernetes.io/ingress.class: nginx
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - payg-sandbox-api.ext.gpmn.net
    secretName: wildcard-ext-gpmn-net
  rules:
  - host: payg-sandbox-api.ext.gpmn.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: imt-payg-apigateway
            port: 
              number: 8001

---
apiVersion: v1
kind: Secret
metadata:
  name: wildcard-ext-gpmn-net
type: kubernetes.io/tls
data:
  tls.crt: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdhVENDQkZHZ0F3SUJBZ0lRVVVxRVZEbVl6N0t5Mzc4d256UXRRREFOQmdrcWhraUc5dzBCQVF3RkFEQkwKTVFzd0NRWURWUVFHRXdKQlZERVFNQTRHQTFVRUNoTUhXbVZ5YjFOVFRERXFNQ2dHQTFVRUF4TWhXbVZ5YjFOVApUQ0JTVTBFZ1JHOXRZV2x1SUZObFkzVnlaU0JUYVhSbElFTkJNQjRYRFRJeU1USXhOREF3TURBd01Gb1hEVEl6Ck1ETXhOREl6TlRrMU9Wb3dHVEVYTUJVR0ExVUVBd3dPS2k1bGVIUXVaM0J0Ymk1dVpYUXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFBqdjcxa3ZFVUd2MGpYaDJVWXZPdW14SjdNWk1KRmV5ZQpEa3h6OTJkMXBSaWtM [...]
  tls.key: "LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcFFJQkFBS0NBUUVBejQ3KzlaTHhGQnI5STE0ZGxHTHpycHNTZXpHVENSWHNuZzVNYy9kbmRhVVlwQzdoClFDRFRwVHZnT2Q5NnliTS9OUi8vS2NBbTNJZEVHbmhoUkJmQ0FPclcreUpKVHA4TTYxbzBrdVdiMm9KSzl0ek4Ka3hRTFFCbkgrT0w3RnJMRlU0aUJRNVhGRzkxSUNYTlJCVzJZbEhzb1pLOGNoaEd0M2pvSHJOU2E3V3p5eEVCYQpxMDYwODVlV0FON1NNclVvcUx0bkZGek9kUmltN21WbGpHVEJMd3ZuZ25xQWdvMDloaG1xaGwwVjF0WWFZcldNCldQVmVsZmJGc256ZlBXS3NFdjJRMld6K05HdkdZWEl2VEhDVWlrbnY0enpITXZtMzNmamVxeHcrVWRNc3FhbS8KR1JGM1IxeTRW [...]
